Use base::nullopt instead of std::string() for Optional parameter in WebrtcAudioPrivateGetAssociatedSinkFunction.

DCHECK was hit because of incorrect usage; fixed with this change.

Bug: 804836
Change-Id: Ia09f9a6bc563b6468236fd821ade49e1cb8f0fa7
Reviewed-on: https://chromium-review.googlesource.com/883343
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Henrik Grunell <grunell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531685}