chrome/browser/extensions/api/webrtc_audio_private/webrtc_audio_private_api.cc
@@ -270,7 +270,7 @@ void WebrtcAudioPrivateGetAssociatedSinkFunction::
     }
   }
   if (raw_source_id.empty()) {
-    CalculateHMACOnIOThread(std::string());
+    CalculateHMACOnIOThread(base::nullopt);
     return;
   }
   GetAudioSystem()->GetAssociatedOutputDeviceID(
